--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,35 +1,39 @@
 body {
     padding-top: 55px;
-  }
+    background-color: #F3F4F9;
+}
+
+.dashboard {
+    margin-top: 1rem;
+}
 
 /* The side navigation menu */
 .sidebar {
     margin: 0;
     padding: 0;
     width: 200px;
-    background-color: #f1f1f1;
+    background-color: #343A40;
     position: fixed;
     height: 100%;
     overflow: auto;
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.19)
 }
   
 /* Sidebar links */
 .sidebar a {
     display: block;
-    color: black;
+    color: white;
     padding: 16px;
     text-decoration: none;
 }
 
 /* Active/current link */
 .sidebar a.active {
-    background-color: #f5f5f5;
+    background-color: #424850;
 }
 
 /* Links on mouse-over */
 .sidebar a:hover:not(.active) {
-    background-color: #ebebeb;
+    background-color: #424850;
 }
 
 /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
@@ -41,29 +45,45 @@ div.content {
 
 /* On screens that are less than 700px wide, make the sidebar into a topbar */
 @media screen and (max-width: 700px) {
-.sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-}
-.sidebar a {float: left;}
-div.content {margin-left: 0;}
+    .sidebar {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+    .sidebar a {float: left;}
+    div.content {margin-left: 0;}
 }
 
 /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
 @media screen and (max-width: 400px) {
-.sidebar a {
-    text-align: center;
-    float: none;
-}
+    .sidebar a {
+        text-align: center;
+        float: none;
+    }
 }
 
 /* Tables */
-.table thead th {
-    vertical-align: middle;
+.emission-table {
+    padding: 2rem;
+    background-color: white;
 }
 
-.table tbody th {
+.table thead th {
     vertical-align: middle;
     text-align: center;
+}
+
+.table td, .table th {
+    vertical-align: middle;
+    text-align: center;
+}
+
+.delete-item-button {
+    background-color: transparent;
+    border: white;
+    margin: 0.5rem;
+}
+
+.delete-item-button:hover {
+    background-color: #cacaca;
 }
