--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,7 @@ body {
     margin: 0;
     padding: 0;
     width: 200px;
-    background-color: #343A40;
+    background-color: white;
     position: fixed;
     height: 100%;
     overflow: auto;
@@ -21,19 +21,19 @@ body {
 /* Sidebar links */
 .sidebar a {
     display: block;
-    color: white;
+    color: black;
     padding: 16px;
     text-decoration: none;
 }
 
 /* Active/current link */
 .sidebar a.active {
-    background-color: #424850;
+    background-color: #F3F4F9;
 }
 
 /* Links on mouse-over */
 .sidebar a:hover:not(.active) {
-    background-color: #424850;
+    background-color: #F3F4F9;
 }
 
 /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
