--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,43 +2,67 @@ body {
     background-color: #E6E6E6;
 }
 
-.dashboard {
-    margin-top: 1rem;
-}
-
 /* The side navigation menu */
 .sidebar {
     margin: 0;
     padding: 0;
-    width: 200px;
-    background-color: white;
+    width: 300px;
+    background-color: #2b3242;
     position: fixed;
     height: 100%;
     overflow: auto;
+}
+
+.sidebar-header {
+    display: flex;
+    padding: 1rem;
+}
+
+.sidebar button {
+    width: 94%;
+    margin: 3%;
+    padding: 1rem;
+    color: #E6E6E6;
+    background-color: #2b3242;
+}
+
+.sidebar button:hover {
+    color: #2b3242;
+    background-color: #E6E6E6;
+}
+
+.sidebar h1 {
+    margin-left: 1rem;
+    margin-top: 0.1rem;
+    font-size: 2rem;
+    color: #E6E6E6;
 }
   
 /* Sidebar links */
 .sidebar a {
     display: block;
-    color: black;
-    padding: 16px;
+    color: #E6E6E6;
+    padding: 1rem;
     text-decoration: none;
+    border-left: 0.2rem #2b3242 solid;
+    border-bottom: 0.1rem #e6e6e610 solid;
 }
 
 /* Active/current link */
 .sidebar a.active {
-    background-color: #F3F4F9;
+    border-left: 0.2rem #E6E6E6 solid;
 }
 
 /* Links on mouse-over */
 .sidebar a:hover:not(.active) {
-    background-color: #F3F4F9;
+    border-left: 0.2rem #E6E6E6 solid;
+    background-color: #353e52;
 }
 
 /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
 div.content {
-    margin-left: 220px;
-    padding: 1px 16px;
+    margin-left: 300px;
+    padding: 1rem;
 }
 
 /* On screens that are less than 700px wide, make the sidebar into a topbar */
@@ -62,9 +86,8 @@ div.content {
 
 /* Tables */
 .emission-table {
-    padding: 2rem;
-    background-color: white;
-    font-size: 0.9rem;
+    margin: 1rem;
+    font-size: 0.8rem;
 }
 
 .table thead th, .table td, .table th {
@@ -82,21 +105,24 @@ div.content {
 }
 
 /* Table Pagination */
+.pagination {
+    display: flex;
+    justify-content: flex-end;
+    padding: 1rem;
+}
+
 .page-link, .page-link:hover {
-    color: #212529;
+    color: #2b3242;
 }
 
 .page-item.active .page-link {
-    background-color: #4b4b4b;
-    border-color: #4b4b4b;
+    background-color: #2b3242;
+    border-color: #2b3242;
 }
 
 /* Emissions Line Graph */
 .emission-graph {
-    background-color: white;
     padding: 2rem;
-    margin: 1rem;
-    margin-bottom: 10rem;
 }
 
 /* Login Page */
@@ -140,4 +166,25 @@ div.content {
 .login-button {
     background-color: #040D21;
     border-color: #040D21;
+}
+
+.dashboard h1 {
+    font-size: 2rem;
+}
+
+.dashboard-panel {
+    margin-bottom: 1rem;
+    box-shadow: 0 5px 10px 1px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    background-color: #f5f5f5;
+}
+
+.dashboard-panel h2 {
+    font-size: 1.5rem;
+    text-align: center;
+    border-radius: 20px 20px 0 0;
+    background-color: #2b3242;
+    color: #E6E6E6;
+    padding: 1rem;
+    margin-bottom: 0;
 }
