--- a/client/src/App.css
+++ b/client/src/App.css
@@ -123,6 +123,7 @@ div.content {
 /* Emissions Line Graph */
 .emission-graph {
     padding: 2rem;
+    padding-top: 0;
 }
 
 /* Login Page */
@@ -184,7 +185,13 @@ div.content {
     text-align: center;
     border-radius: 20px 20px 0 0;
     background-color: #2b3242;
-    color: #E6E6E6;
+    color: #f5f5f5;
     padding: 1rem;
     margin-bottom: 0;
+}
+
+.year-input {
+    background-color: #f5f5f5;
+    width: 6rem;
+    margin: 0.5rem;
 }
