--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,6 +21,7 @@ body {
 .sidebar button {
     width: 94%;
     margin: 3%;
+    margin-bottom: 0;
     padding: 1rem;
     color: #E6E6E6;
     background-color: #2b3242;
@@ -28,7 +29,7 @@ body {
 
 .sidebar button:hover {
     color: #2b3242;
-    background-color: #E6E6E6;
+    background-color: #E6E6E6;;
 }
 
 .sidebar h1 {
