Removing CSS typo

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,7 +29,7 @@ body {
 
 .sidebar button:hover {
     color: #2b3242;
-    background-color: #E6E6E6;;
+    background-color: #E6E6E6;
 }
 
 .sidebar h1 {
