--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,14 @@
+/* General */
 body {
     background-color: #E6E6E6;
 }
 
-/* The side navigation menu */
+div.content {
+    margin-left: 300px;
+    padding: 1rem;
+}
+
+/* Navigation Menu */
 .sidebar {
     margin: 0;
     padding: 0;
@@ -26,10 +32,6 @@ body {
     background-color: #2b3242;
 }
 
-#add-item-button {
-    margin-bottom: 0;
-}
-
 .sidebar button:hover {
     color: #2b3242;
     background-color: #E6E6E6;
@@ -42,7 +44,6 @@ body {
     color: #E6E6E6;
 }
   
-/* Sidebar links */
 .sidebar a {
     display: block;
     color: #E6E6E6;
@@ -52,21 +53,17 @@ body {
     border-bottom: 0.1rem #e6e6e610 solid;
 }
 
-/* Active/current link */
 .sidebar a.active {
     border-left: 0.2rem #E6E6E6 solid;
 }
 
-/* Links on mouse-over */
 .sidebar a:hover:not(.active) {
     border-left: 0.2rem #E6E6E6 solid;
     background-color: #353e52;
 }
 
-/* Page content. The value of the margin-left property should match the value of the sidebar's width property */
-div.content {
-    margin-left: 300px;
-    padding: 1rem;
+#add-item-button {
+    margin-bottom: 0;
 }
 
 /* On screens that are less than 700px wide, make the sidebar into a topbar */
@@ -88,7 +85,7 @@ div.content {
     }
 }
 
-/* Tables */
+/* Emission Table */
 .emission-table {
     margin: 1rem;
     font-size: 0.8rem;
@@ -108,7 +105,7 @@ div.content {
     background-color: #cacaca;
 }
 
-/* Table Pagination */
+/* Emission Table Pagination */
 .pagination {
     display: flex;
     justify-content: flex-end;
@@ -124,7 +121,7 @@ div.content {
     border-color: #2b3242;
 }
 
-/* Emissions Line Graph */
+/* Emission Chart */
 .emission-graph {
     padding: 2rem;
     padding-top: 0;
@@ -173,6 +170,7 @@ div.content {
     border-color: #040D21;
 }
 
+/* Dashboard */
 .dashboard h1 {
     font-size: 2rem;
 }
